# yorumla-mcp

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  render.yaml
backend/: Dockerfile  entrypoint.sh  pyproject.toml  setup.cfg  setup.py
backend/app/api/: main.py
backend/app/api/routes/: health.py  products.py
backend/app/core/: config.py  errors.py  logging.py  security.py
backend/app/db/: models.py  repositories.py  session.py
backend/app/mcp/: server.py  tools.py
backend/app/schemas/: analysis.py  reviews.py
backend/app/services/: analysis_jobs.py  product_review_service.py
backend/app/services/analysis/: fake_review_detector.py  recommendation.py  sentiment.py  turkish_rules.py
backend/app/services/scraper/: hepsiburada.py  retry.py  selectors.py
backend/tests/: test_api_contracts.py  test_fake_review_detector.py  test_mcp_tools.py  test_recommendation.py  test_sentiment.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: analysis-result.tsx  recommendation-badge.tsx  risk-meter.tsx  url-form.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  progress.tsx
frontend/lib/: api.ts  types.ts
